# multimodal_toolkit

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
benchmark/: README.md  __init__.py
benchmark/audio/: __init__.py  cli.py  config.py  data.py  metrics.py  mock_llm.py  pipeline.py  report.py  storage.py  submit.py
docs/: audio-benchmark.md  daft-tuning.md
multimodal_toolkit/: analyze.py  asr.py  audio_embedding.py  blob.py  config.py  embed.py  ingest.py  io.py  prompt.py  query.py
multimodal_toolkit/audio/: config.py  embedding.py  llm.py  schema.py  udfs.py
multimodal_toolkit/audio/workflow/: analyze.py  ingest.py
multimodal_toolkit/image/: config.py  detector.py  embedding.py  prompt.py  quality.py  rules.py  schema.py  udfs.py  vlm.py
multimodal_toolkit/image/workflow/: analyze.py  ingest.py  query.py
multimodal_toolkit/pipeline/: analyze.py  embed.py  embed_daft.py  query.py
multimodal_toolkit/storage/: io.py  schema.py
multimodal_toolkit/workflow/: analyze.py  index.py  ingest.py  manage.py  query.py
scripts/: init_s3.py
tests/: conftest.py
tests/audio/: test_analyze_udfs.py  test_ingest.py  test_llm_provider.py  test_prompt.py  test_query.py
tests/benchmark/: __init__.py  test_config.py  test_data.py  test_e2e.py  test_mock_llm.py  test_report.py  test_submit.py
tests/image/: conftest.py  test_desc_join.py  test_detector.py  test_embedding_pipeline.py  test_ingest.py  test_llm_analysis.py  test_pipeline_e2e.py  test_quality.py  test_query.py  test_rules.py
tests/storage/: test_blob.py  test_io.py
tests/workflow/: test_imports.py  test_index_manage.py  test_query.py
