[project]
name = "multimodal-toolkit"
version = "0.1.0"
description = "Minimal audio POC: S3 manifest -> Lance blob v2 -> analysis -> acoustic embedding -> query"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "daft-lance>=0.4.0",
  "funasr",
  "getdaft",
  "insightface",
  "lance-ray",
  "modelscope",
  "numpy",
  "onnxruntime",
  "opencv-python-headless",
  "openai",
  "pillow",
  "pyarrow",
  "pylance<8.0.0",
  "python-dotenv",
  "ray",
  "soundfile",
  "torch",
  "torchaudio",
  "transformers",
]

[tool.pytest.ini_options]
markers = [
  "ray: hard dependency on a local Ray cluster; excluded by default, run with `pytest -m ray`",
]
addopts = "-m 'not ray'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multimodal_toolkit"]
